<resources>

    <!--Homepage Strings-->
    <string name="app_name">Splash</string>
    <string name="sign_out_text">Sign Out</string>
    <string name="edit_profile_text">Edit Profile</string>
    <string name="submit_water_report_text">Submit Water Source Report</string>
    <string name="view_water_reports_text">View Water Source Reports</string>
    <string name="submit_quality_report_text">Submit Water Quality Report</string>
    <string name="view_quality_reports_text">View Water Quality Reports</string>
    <string name="view_map_text">View Map</string>
    <string name="title_activity_map">Map</string>
    <string name="view_graph_text">View Graph</string>
    <string name="view_water_reports_icon">View Water Reports Icon</string>
    <string name="submit_water_report_icon">Submit Water Report Icon</string>
    <string name="view_map_icon">View Map Icon</string>
    <string name="view_quality_report_icon">View Quality Report Icon</string>
    <string name="submit_quality_report_icon">Submit Quality Report Icon</string>
    <string name="edit_profile_icon">Edit Profile Icon</string>
    <string name="view_graph_icon">View Graph Icon</string>
    <string name="sign_out_icon">Sign Out Icon</string>
    <string name="placeholder">Placeholder</string>
    <string name="view_log_icon">View Log Icon</string>


    <!--Generate Graph Strings-->
    <string name="generate_historical_report_text">Generate Historical Report</string>
    <string name="pollution_type_text">Pollution Type:</string>
    <string name="year_text">Year:</string>
    <string name="enter_year_hint">Enter Year</string>
    <string name="latitude_text">Latitude:</string>
    <string name="enter_latitude_hint">Enter Latitude</string>
    <string name="longitude_text">Longitude:</string>
    <string name="enter_longitude_hint">Enter Longitude</string>
    <string name="radius_text">Radius:</string>
    <string name="generate_graph_text">Generate Graph</string>

    <!--Edit Profile Strings-->
    <string name="submit_water_quality_report">Submit Water Quality Report</string>
    <string name="water_quality">Water Quality:</string>
    <string name="virus_ppm">Virus PPM:</string>
    <string name="enter_virus_ppm">Enter virus PPM</string>
    <string name="contaminant_ppm">Contaminant PPM:</string>
    <string name="enter_contaminant_ppm">Enter contaminant PPM</string>
    <string name="latitude">Latitude:</string>
    <string name="enter_latitude">Enter Latitude</string>
    <string name="longitude">Longitude:</string>
    <string name="enter_longitude">Enter Longitude</string>
    <string name="generate_coordinates_from_gps">Generate Coordinates From GPS</string>
    <string name="submit">Submit</string>
    <string name="submit_water_source_report">Submit Water Source Report</string>
    <string name="water_type">Water Type:</string>
    <string name="water_condition">Water Condition:</string>

    <!--Activity Welcome Strings-->
    <string name="app_logo_description">App Logo</string>
    <string name="edit_profile_welcome_text">Editing Profile</string>
    <string name="edit_profile_button_text">Update Profile</string>
    <string name="welcome_to_splash_let_s_get_you_registered">
        Welcome to Splash! Let\'s get you registered</string>
    <string name="email_address">Email Address:</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="display_name">Display Name:</string>
    <string name="enter_display_name">Enter Display Name</string>
    <string name="home_address">Home Address:</string>
    <string name="enter_home_address">Enter Home Address</string>
    <string name="user_type">User Type:</string>
    <string name="register">Register</string>

    <!--Water Source Report Layout Strings-->
    <string name="report_id">Report ID</string>
    <string name="reporter_name">Reporter Name</string>
    <!--Water type and condition already declared above-->
    <string name="location">Latitude\nLongitude</string>

    <!--Log Strings-->
    <string name="timestamp">Timestamp:</string>
    <string name="type">Type:</string>
    <string name="user_uid">User UID:</string>
    <string name="details">Details:</string>
</resources>
