<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_submit_quality_report"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.nutsandbolts.splash.Controller.SubmitQualityReportActivity">

    <TextView
        android:id="@+id/submit_quality_report_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/submit_water_quality_report"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/water_quality_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/submit_quality_report_text"
        android:padding="5dp"
        android:text="@string/water_quality"
        android:textSize="15sp" />

    <Spinner
        android:id="@+id/water_quality_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/water_quality_label"
        android:layout_toEndOf="@+id/water_quality_label" />

    <TextView
        android:id="@+id/water_virusPPM_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/water_quality_label"
        android:padding="5dp"
        android:text="@string/virus_ppm"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/water_virusPPM_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/water_virusPPM_label"
        android:layout_toEndOf="@+id/water_virusPPM_label"
        android:ems="10"
        android:hint="@string/enter_virus_ppm"
        android:inputType="number"
        android:padding="5dp"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/water_contaminantPPM_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/water_virusPPM_label"
        android:padding="5dp"
        android:text="@string/contaminant_ppm"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/water_contaminantPPM_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/water_contaminantPPM_label"
        android:layout_toEndOf="@+id/water_contaminantPPM_label"
        android:ems="10"
        android:hint="@string/enter_contaminant_ppm"
        android:inputType="number"
        android:padding="5dp"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/water_source_latitude_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/water_contaminantPPM_label"
        android:padding="5dp"
        android:text="@string/latitude"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/water_source_latitude_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/water_source_latitude_label"
        android:layout_toEndOf="@+id/water_source_latitude_label"
        android:hint="@string/enter_latitude"
        android:inputType="numberDecimal|numberSigned"
        android:padding="5dp"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/water_source_longitude_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/water_source_latitude_label"
        android:padding="5dp"
        android:text="@string/longitude"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/water_source_longitude_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/water_source_longitude_label"
        android:layout_toEndOf="@+id/water_source_longitude_label"
        android:ems="10"
        android:hint="@string/enter_longitude"
        android:inputType="numberDecimal|numberSigned"
        android:padding="5dp"
        android:textSize="15sp" />

    <Button
        android:id="@+id/generate_from_gps_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/water_source_longitude_label"
        android:layout_centerHorizontal="true"
        android:text="@string/generate_coordinates_from_gps" />


    <Button
        android:id="@+id/upload_water_report_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/submit" />

</RelativeLayout>
