<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.nutsandbolts.splash.Controller.HomeActivity">

    <Button
        android:id="@+id/sign_out_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/sign_out_text" />

    <Button
        android:id="@+id/edit_profile_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sign_out_button"
        android:layout_centerHorizontal="true"
        android:text="@string/edit_profile_text" />

    <Button
        android:id="@+id/submit_water_report_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_profile_button"
        android:layout_centerHorizontal="true"
        android:text="@string/submit_water_report_text" />

    <Button
        android:id="@+id/view_water_reports_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/submit_water_report_button"
        android:layout_centerHorizontal="true"
        android:text="@string/view_water_reports_text" />

    <Button
        android:id="@+id/view_map_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view_water_reports_button"
        android:layout_centerHorizontal="true"
        android:text="@string/view_map_text" />
</RelativeLayout>
