<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/infoSection"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/log_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type"
        android:textSize="18sp"
        android:textStyle="normal|bold" />

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/log_info"
            android:layout_alignParentStart="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/log_timestamp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timestamp" />

            <TextView
                android:id="@+id/log_user_uid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_uid" />

            <TextView
                android:id="@+id/log_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/details" />
        </LinearLayout>

    </RelativeLayout>
</LinearLayout>